--- a/Portfolio Website/Project/index.html
+++ b/Portfolio Website/Project/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="col-lg-6 text-center text-lg-end">
                     <div class="img-container">
-                        <img class="img-fluid border rounded" src="../Images/tanvir.jpg" alt="Profile Picture">
+                        <img class="img-fluid border rounded" src="./Images/tanvir.jpg" alt="Profile Picture">
                     </div>
                 </div>
             </div>
