--- a/Portfolio Website/Project/index.html
+++ b/Portfolio Website/Project/index.html
@@ -7,7 +7,7 @@
     <title>Nazmul Karim Tanvir - Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/Portfolio Website/Project/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
