--- a/Portfolio Website/Project/index.html
+++ b/Portfolio Website/Project/index.html
@@ -15,7 +15,7 @@
     <!-- Navbar section -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Nazmul Karim Tanvir</a>
+            <a class="navbar-brand" href="#home">Nazmul Karim Tanvir</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
