--- a/Portfolio Website/Project/index.html
+++ b/Portfolio Website/Project/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- Navbar section -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#home">Nazmul Karim Tanvir</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
