--- a/Portfolio Website/Project/index.html
+++ b/Portfolio Website/Project/index.html
@@ -9,11 +9,10 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
     <!-- Navbar section -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top shadow">
         <div class="container">
             <a class="navbar-brand" href="#home">Nazmul Karim Tanvir</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -33,13 +32,12 @@
                 <button id="theme-toggle" class="btn btn-outline-light ms-3" aria-label="Toggle theme">
                     <i id="theme-icon" class="fas fa-moon"></i>
                 </button>
-
             </div>
         </div>
     </nav>
 
     <!-- Home section -->
-    <header id="home" class="hero py-5">
+    <header id="home" class="hero">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 text-center text-lg-start">
@@ -78,38 +76,36 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 mb-4">
-                    <div class="card info"> <!-- Added 'info' class here -->
+                    <div class="card info">
                         <div class="card-body">
                             <h4 class="card-title">MSC in Computer Science and Engineering</h4>
-                            <!-- Changed h3 to h4 -->
                             <p class="card-text"><strong>BRAC University</strong><br>2023-2024</p>
                             <p class="card-text">Graduated with honors.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 mb-4">
-                    <div class="card info"> <!-- Added 'info' class here -->
+                    <div class="card info">
                         <div class="card-body">
                             <h4 class="card-title">BSc in Computer Science and Engineering</h4>
-                            <!-- Changed h3 to h4 -->
                             <p class="card-text"><strong>BRAC University</strong><br>2018-2022</p>
                             <p class="card-text">Received Dean's List recognition.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 mb-4">
-                    <div class="card info"> <!-- Added 'info' class here -->
+                    <div class="card info">
                         <div class="card-body">
-                            <h4 class="card-title">HSC in Science</h4> <!-- Changed h3 to h4 -->
+                            <h4 class="card-title">HSC in Science</h4>
                             <p class="card-text"><strong>Shahid Ramiz Uddin Cantonment College</strong><br>2017</p>
                             <p class="card-text">Specialized in Science stream.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 mb-4">
-                    <div class="card info"> <!-- Added 'info' class here -->
+                    <div class="card info">
                         <div class="card-body">
-                            <h4 class="card-title">SSC in Science</h4> <!-- Changed h3 to h4 -->
+                            <h4 class="card-title">SSC in Science</h4>
                             <p class="card-text"><strong>Nakhalpara Hossain Ali High School</strong><br>2015</p>
                             <p class="card-text">Completed secondary education.</p>
                         </div>
@@ -118,9 +114,6 @@
             </div>
         </div>
     </section>
-
-
-
 
     <!-- Skills section -->
     <section id="skills" class="py-5">
@@ -138,7 +131,7 @@
                 <div class="col-md-6">
                     <div class="info">
                         <h4>Backend Development</h4>
-                        <p>Node.js, Express, MongoDB,Python, Django, SQL, PHP , Laravel</p>
+                        <p>Node.js, Express, MongoDB, Python, Django, SQL, PHP, Laravel</p>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -160,17 +153,15 @@
                         <p>LaTeX, Google Docs, Markdown, Confluence</p>
                     </div>
                 </div>
-
                 <div class="col-md-6">
                     <div class="info">
                         <h4>Language</h4>
-                        <p>English , Bangla </p>
+                        <p>English, Bangla</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
 
     <!-- Experience section -->
     <section id="experience" class="py-5">
@@ -243,38 +234,38 @@
                     </div>
                 </div>
             </div>
-            <form class="contact-form form-bg-editing rounded" action="mailto:nazmul.karim.tanvir@g.bracu.ac.bd" method="post"
-                    enctype="text/plain">
+            <form class="contact-form form-bg-editing rounded" action="mailto:nazmul.karim.tanvir@g.bracu.ac.bd"
+                method="post" enctype="text/plain">
 
-                    <div class="form-group">
-                        <label for="Country"><i>Country/Region:</i></label>
-                        <input type="text" class="form-control" id="name" name="name"
-                            placeholder="Enter your country/region" required>
-                    </div>
+                <div class="form-group">
+                    <label for="Country"><i>Country/Region:</i></label>
+                    <input type="text" class="form-control" id="countryname" name="countryname"
+                        placeholder="Enter your country/region" required>
+                </div>
 
-                    <div class="form-group">
-                        <label for="name"><i>Yout name:</i></label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name"
-                            required>
-                    </div>
+                <div class="form-group">
+                    <label for="name"><i>Your name:</i></label>
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name"
+                        required>
+                </div>
 
-                    <div class="form-group">
-                        <label for="text"><i>Message:</i></label>
-                        <textarea class="form-control" id="text" name="text" rows="5" placeholder="Enter some text"
-                            required></textarea>
-                    </div>
+                <div class="form-group">
+                    <label for="text"><i>Message:</i></label>
+                    <textarea class="form-control" id="text" name="text" rows="5" placeholder="Enter some text"
+                        required></textarea>
+                </div>
 
-                    <div class="form-group">
-                        <label for="number">Contact Number: </label>
-                        <input type="number" class="form-control" id="number" name="number"
-                            placeholder="Enter your number/Optional">
-                    </div>
+                <div class="form-group">
+                    <label for="number">Contact Number: </label>
+                    <input type="number" class="form-control" id="number" name="number"
+                        placeholder="Enter your number (Optional)">
+                </div>
 
-                    <button type="submit" class="btn btn-primary btn-sm mb-2">
-                        Send
-                    </button>
+                <button type="submit" class="btn btn-primary btn-sm mb-2">
+                    Send
+                </button>
 
-                </form>
+            </form>
         </div>
     </section>
 
@@ -296,7 +287,6 @@
                             rel="noopener" aria-label="YouTube">
                             <i class="fab fa-youtube"></i>
                         </a>
-
                     </div>
                     <p class="mt-3">&copy; 2024 Nazmul Karim Tanvir. All Rights Reserved.</p>
                 </div>
@@ -306,9 +296,35 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-
     <!-- Theme JS Code  -->
     <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const navbarToggler = document.querySelector('.navbar-toggler');
+            const togglerIcon = navbarToggler.querySelector('.navbar-toggler-icon');
+            const navLinks = document.querySelectorAll('.nav-link');
+            const navbarCollapse = document.querySelector('.navbar-collapse');
+
+            // Toggle icon change on click
+            navbarToggler.addEventListener('click', function () {
+                if (navbarToggler.classList.contains('collapsed')) {
+                    togglerIcon.classList.remove('fas', 'fa-times');
+                    togglerIcon.classList.add('navbar-toggler-icon');
+                } else {
+                    togglerIcon.classList.remove('navbar-toggler-icon');
+                    togglerIcon.classList.add('fas', 'fa-times');
+                }
+            });
+
+            // Collapse navbar on nav-link click
+            navLinks.forEach(function (navLink) {
+                navLink.addEventListener('click', function () {
+                    if (navbarToggler.getAttribute('aria-expanded') === 'true') {
+                        navbarToggler.click();
+                    }
+                });
+            });
+        });
+
         const themeToggle = document.getElementById('theme-toggle');
         const themeIcon = document.getElementById('theme-icon');
 
