--- a/Portfolio Website/Project/index.html
+++ b/Portfolio Website/Project/index.html
@@ -26,15 +26,18 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#home"><i class="fas fa-home"></i> Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about"><i class="fas fa-user"></i> About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#education"><i class="fas fa-graduation-cap"></i>
-                            Education</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#skills"><i class="fas fa-code"></i> Skills</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#experience"><i class="fas fa-briefcase"></i>
-                            Experience</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#home"><i class="fas fa-home"></i> Home</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="#about"><i class="fas fa-user"></i> About</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="#services"> <i class="fas fa-laptop-code"></i>
+                            Services</a>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="#projects"><i class="fas fa-folder-open"></i>
-                            Projects</a></li>
+                            Projects</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="#skills"><i class="fas fa-code"></i> Skills</a>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="#contact"><i class="fas fa-envelope"></i> Contact</a>
                     </li>
                 </ul>
@@ -70,119 +73,110 @@
             <div class="section-title">
                 <h2>About Me</h2>
             </div>
-            <div class="info">
-                <p>Hello! I'm Nazmul Karim Tanvir, a Software Engineer with experience in full stack development and
-                    mobile applications. I have a deep passion for coding, solving complex problems, and continually
-                    improving my skills.</p>
-            </div>
-        </div>
-    </section>
+            <div class="row info">
+                <div class="col-lg-6">
+                    <div>
+                        <p class="lead">Hello! I'm Nazmul Karim Tanvir, a Software Engineer with experience in full
+                            stack development
+                            and mobile applications.I have a strong background in both frontend and backend technologies
+                            and thrive in fast-paced, agile environments.</p>
 
-    <!-- Education section -->
-    <section id="education" class="py-5">
-        <div class="container">
-            <div class="section-title text-center mb-5">
-                <h2>Education</h2>
-            </div>
-            <div class="row">
-                <div class="col-lg-6 mb-4">
-                    <div class="card info">
-                        <div class="card-body">
-                            <h4 class="card-title">MSC in Computer Science and Engineering</h4>
-                            <p class="card-text"><strong>BRAC University</strong><br>2023-2024</p>
-                            <p class="card-text">Graduated with honors.</p>
+                        <div class="mt-4">
+                            <p><i class="fas fa-briefcase"></i> Support Associate at Shikho | Full Stack Web Developer
+                                (MERN) | Android App Developer |
+                                Fiver | Upwork</p>
+
+                            <p><i class="fas fa-car"></i> Founder of Tanvir_Rent_A_Car, providing affordable rides to
+                                300+ users within 6 months.
+                                <strong>Tanvir_Rent_A_Car:</strong> <a href="https://www.facebook.com/TanviRentACar"
+                                    target="_blank" rel="noopener">Visit</a><br>
+                            </p>
+
+                            <p><i class="fas fa-paint-brush " style="color: #05daff;"></i> Passionate about painting,
+                                traveling, and blogging. NK VLOGS BD, a blogging channel with 800+ subscribers and
+                                100,000+ views. <strong>NK VLOGS BD:</strong> <a
+                                    href="https://www.youtube.com/channel/UCRvLlXr3hn8dpG7ZRXkE7Tw" target="_blank"
+                                    rel="noopener">Visit</a></p>
+
+                            </p>
                         </div>
+
                     </div>
                 </div>
-                <div class="col-lg-6 mb-4">
-                    <div class="card info">
-                        <div class="card-body">
-                            <h4 class="card-title">BSc in Computer Science and Engineering</h4>
-                            <p class="card-text"><strong>BRAC University</strong><br>2018-2022</p>
-                            <p class="card-text">Received Dean's List recognition.</p>
-                        </div>
+                <div class="col-lg-6">
+                    <div class="img-container1 text-center">
+                        <img class="img-fluid" src="./Images/graduationimage.jpeg"
+                            alt="15th convocation BRAC University">
                     </div>
-                </div>
-                <div class="col-lg-6 mb-4">
-                    <div class="card info">
-                        <div class="card-body">
-                            <h4 class="card-title">HSC in Science</h4>
-                            <p class="card-text"><strong>Shahid Ramiz Uddin Cantonment College</strong><br>2017</p>
-                            <p class="card-text">Specialized in Science stream.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 mb-4">
-                    <div class="card info">
-                        <div class="card-body">
-                            <h4 class="card-title">SSC in Science</h4>
-                            <p class="card-text"><strong>Nakhalpara Hossain Ali High School</strong><br>2015</p>
-                            <p class="card-text">Completed secondary education.</p>
-                        </div>
+                    <div class="mt-4 ">
+                        <p><i class="fas fa-graduation-cap fa-2x"></i></p>
+                        <h6>
+                            <strong>BSC , MSC</strong> in
+                            <strong>CSE</strong>
+                            CSE BRAC University
+                        </h6>
                     </div>
                 </div>
             </div>
         </div>
+        </div>
     </section>
 
-    <!-- Skills section -->
-    <section id="skills" class="py-5">
+    <!-- Services section -->
+    <section id="services" class="py-5">
         <div class="container text-center">
             <div class="section-title">
-                <h2>Skills</h2>
+                <h2>Services</h2>
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="info">
-                        <h4>Frontend Development</h4>
-                        <p>HTML5, CSS, Bootstrap, JavaScript, React, Angular</p>
+                        <i class="fas fa-laptop-code" style="color: #007bff; font-size: 3rem;"></i>
+                        <h4>Web Development</h4>
+                        <p>We provide modern web development solutions using the latest technologies to create
+                            responsive and user-friendly websites.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="info">
-                        <h4>Backend Development</h4>
-                        <p>Node.js, Express, MongoDB, Python, Django, SQL, PHP, Laravel</p>
+                        <i class="fas fa-mobile-alt" style="color: #28a745; font-size: 3rem;"></i>
+                        <h4>Mobile App Development</h4>
+                        <p>Our team specializes in creating high-quality mobile applications for both iOS and Android
+                            platforms to meet your business needs.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="info">
-                        <h4>Mobile / IOS Development</h4>
-                        <p>React Native, Swift, Java, Kotlin</p>
+                        <i class="fas fa-cloud" style="color: #17a2b8; font-size: 3rem;"></i>
+                        <h4>Cloud Services</h4>
+                        <p>We offer comprehensive cloud services including deployment, management, and support to ensure
+                            your business operations run smoothly.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="info">
-                        <h4>Version Control</h4>
-                        <p>Git, Docker, CI/CD, Cloud Services (AWS, Azure), Agile Methodologies</p>
+                        <i class="fas fa-search" style="color: #ffc107; font-size: 3rem;"></i>
+                        <h4>SEO Optimization</h4>
+                        <p>Enhance your online presence with our expert SEO services designed to improve your website's
+                            ranking and drive more traffic.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="info">
-                        <h4>Documentation</h4>
-                        <p>Microsoft Office: Word, Excel, PowerPoint</p>
-                        <p>LaTeX, Google Docs, Markdown, Confluence</p>
+                        <i class="fas fa-paint-brush" style="color: #e83e8c; font-size: 3rem;"></i>
+                        <h4>Graphic Design</h4>
+                        <p>Our creative team offers graphic design services to create visually appealing and effective
+                            marketing materials for your brand.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="info">
-                        <h4>Language</h4>
-                        <p>English, Bangla</p>
+                        <i class="fas fa-headset" style="color: #6c757d; font-size: 3rem;"></i>
+                        <h4>Customer Support</h4>
+                        <p>We provide dedicated customer support services to assist your clients and ensure their
+                            satisfaction with your products and services.</p>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Experience section -->
-    <section id="experience" class="py-5">
-        <div class="container text-center">
-            <div class="section-title">
-                <h2>Experience</h2>
-            </div>
-            <div class="info">
-                <p>I have worked in various companies, gaining experience in diverse projects ranging from web
-                    applications to mobile apps. I have a strong background in both frontend and backend technologies
-                    and thrive in fast-paced, agile environments.</p>
             </div>
         </div>
     </section>
@@ -195,27 +189,97 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <div class="project-item">
-                        <h4>Project One</h4>
-                        <p>A brief description of the project and its key features.</p>
+                    <div class="info">
+                        <div class="img-container1 text-center">
+                            <img class="img-fluid" src="./Images/e1.png" alt="15th convocation BRAC University">
+                        </div>
+                        <div>
+                            <h4>E-commerce Website</h4>
+                            <p>Using modern technologies like ReactJS</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="project-item">
-                        <h4>Project Two</h4>
-                        <p>A brief description of the project and its key features.</p>
+                    <div class="info">
+                        <div class="img-container1 text-center">
+                            <img class="img-fluid" src="./Images/e2.png" alt="15th convocation BRAC University">
+                        </div>
+                        <div>
+                            <h4>Resturent App</h4>
+                            <p>Using modern technologies like React-Native</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="project-item">
-                        <h4>Project Three</h4>
-                        <p>A brief description of the project and its key features.</p>
+                    <div class="info">
+                        <div class="img-container1 text-center">
+                            <img class="img-fluid" src="./Images/e3.png" alt="15th convocation BRAC University">
+                        </div>
+                        <div>
+                            <h4>FinTech</h4>
+                            <p>Using modern technologies like Kotlin JAVA</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="project-item">
-                        <h4>Project Four</h4>
-                        <p>A brief description of the project and its key features.</p>
+                    <div class="info">
+                        <div class="img-container1 text-center">
+                            <img class="img-fluid" src="./Images/e4.png" alt="15th convocation BRAC University">
+                        </div>
+                        <div>
+                            <h4>Rent a Car App</h4>
+                            <p>Using Golang Docker</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Skills section -->
+    <section id="skills" class="py-5">
+        <div class="container text-center">
+            <div class="section-title">
+                <h2>Skills</h2>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="info">
+                        <h4><i class="fas fa-code" style="color: #ff5733;"></i> Frontend Development</h4>
+                        <p>HTML5, CSS, Bootstrap, JavaScript, React, Angular</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="info">
+                        <h4><i class="fas fa-server" style="color: #33c3ff;"></i> Backend Development</h4>
+                        <p>Node.js, Express, MongoDB, Python, Django, SQL, PHP, Laravel</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="info">
+                        <h4><i class="fas fa-mobile-alt" style="color: #33ff57;"></i> Mobile / IOS Development</h4>
+                        <p>React Native, Swift, Java, Kotlin</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="info">
+                        <h4><i class="fas fa-code-branch" style="color: #ff33a6;"></i> Version Control</h4>
+                        <p>Git, Docker, CI/CD, Cloud Services (AWS, Azure), Agile Methodologies</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="info">
+                        <h4><i class="fas fa-file-alt" style="color: #ffcc33;"></i> Documentation</h4>
+                        <p>Microsoft Office: Word, Excel, PowerPoint</p>
+                        <p>LaTeX, Google Docs, Markdown, Confluence</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="info">
+                        <h4><i class="fas fa-language" style="color: #8a33ff;"></i> Language</h4>
+                        <p>English</p>
+                        <p>Bangla</p>
                     </div>
                 </div>
             </div>
