--- a/Portfolio Website/Project/index.html
+++ b/Portfolio Website/Project/index.html
@@ -113,7 +113,7 @@
                         <h6>
                             <strong>BSC , MSC</strong> in
                             <strong>CSE</strong>
-                            CSE BRAC University
+                            BRAC University
                         </h6>
                     </div>
                 </div>
