--- a/Portfolio Website/Project/index.html
+++ b/Portfolio Website/Project/index.html
@@ -308,7 +308,7 @@
                     </div>
                 </div>
             </div>
-            <form class="contact-form form-bg-editing rounded shadow" action="https://formspree.io/f/mldrdjyp" method="post">
+            <form class="contact-form form-bg-editing rounded" action="https://formspree.io/f/mldrdjyp" method="post">
 
                 <div class="form-group">
                     <label for="countryname"><i>Country/Region:</i></label>
