working on carousal

--- a/Portfolio Website/Project/index.html
+++ b/Portfolio Website/Project/index.html
@@ -31,6 +31,9 @@
                     </li>
                     <li class="nav-item"><a class="nav-link" href="#about"><i class="fas fa-user"></i> About</a>
                     </li>
+                    <li class="nav-item"><a class="nav-link" href="#certifications"> <i class="fas fa-certificate"></i>
+                            Certifications</a>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="#services"> <i class="fas fa-laptop-code"></i>
                             Services</a>
                     </li>
@@ -123,6 +126,95 @@
         </div>
         </div>
     </section>
+
+   <!-- Certifications section -->
+<section id="certifications" class="py-5">
+    <div class="container text-center">
+        <div class="section-title">
+            <h2>Certifications</h2>
+        </div>
+
+        <!-- Carousel -->
+        <div id="certificationsCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <!-- Slide 1 -->
+                <div class="carousel-item active">
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <div class="info">
+                                <img class="img-container2 d-block w-100" src="./Images/cr-1.jpeg" alt="">
+                                <hr>
+                                <h5 class="section-title1 p-1 bolder">Full Stack Web Development with JavaScript (MERN)</h5>
+                                <p>6-month Full Stack (MERN) program covering JavaScript, React, NodeJS, MongoDB, and Git with projects and grades.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <div class="info">
+                                <img class="img-container2 d-block w-100" src="./Images/cr-2.jpg" alt="">
+                                <hr>
+                                <h5 class="section-title1 p-1 bolder">Full Stack Web Development with JavaScript (MERN)</h5>
+                                <p>6-month Full Stack (MERN) program covering JavaScript, React, NodeJS, MongoDB, and Git with projects and grades.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <div class="info">
+                                <img class="img-container2 d-block w-100" src="./Images/cr-3.jpeg" alt="">
+                                <hr>
+                                <h5 class="section-title1 p-1 bolder">Full Stack Web Development with JavaScript (MERN)</h5>
+                                <p>6-month Full Stack (MERN) program covering JavaScript, React, NodeJS, MongoDB, and Git with projects and grades.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Slide 2 -->
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <div class="info">
+                                <img class="img-container2 d-block w-100" src="./Images/cr-4.jpeg" alt="">
+                                <hr>
+                                <h5 class="section-title1 p-1 bolder">Full Stack Web Development with JavaScript (MERN)</h5>
+                                <p>6-month Full Stack (MERN) program covering JavaScript, React, NodeJS, MongoDB, and Git with projects and grades.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <div class="info">
+                                <img class="img-container2 d-block w-100" src="./Images/cr-5.jpeg" alt="">
+                                <hr>
+                                <h5 class="section-title1 p-1 bolder">Full Stack Web Development with JavaScript (MERN)</h5>
+                                <p>6-month Full Stack (MERN) program covering JavaScript, React, NodeJS, MongoDB, and Git with projects and grades.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <div class="info">
+                                <img class="img-container2 d-block w-100" src="./Images/cr-6.jpeg" alt="">
+                                <hr>
+                                <h5 class="section-title1 p-1 bolder">Full Stack Web Development with JavaScript (MERN)</h5>
+                                <p>6-month Full Stack (MERN) program covering JavaScript, React, NodeJS, MongoDB, and Git with projects and grades.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Add more slides as needed -->
+            </div>
+            <!-- Carousel controls -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#certificationsCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#certificationsCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+</section>
+
+<style>
+    
+</style>
+
+
 
     <!-- Services section -->
     <section id="services" class="py-5">
@@ -311,7 +403,8 @@
                 </div>
             </div>
 
-            <form class="contact-form form-bg-editing rounded shadow" action="https://formspree.io/f/mldrdjyp" method="post">
+            <form class="contact-form form-bg-editing rounded shadow" action="https://formspree.io/f/mldrdjyp"
+                method="post">
 
                 <div class="form-group">
                     <label for="countryname"><i>Country / Region:</i></label>
@@ -370,6 +463,10 @@
                         <a href="https://www.youtube.com/channel/UCyGLwYaTWCR-l68h58yixEg" target="_blank"
                             rel="noopener" aria-label="YouTube">
                             <i class="fab fa-youtube"></i>
+                        </a>
+                        <a href="https://scholar.google.com/citations?user=QV2eEoQAAAAJ&hl=en&authuser=3"
+                            target="_blank" rel="noopener" aria-label="Google Scholer">
+                            <i class="fab fa-google"></i>
                         </a>
                     </div>
                     <p class="mt-3">&copy; 2024 Nazmul Karim Tanvir. All Rights Reserved.</p>
