updated certification section

--- a/Portfolio Website/Project/index.html
+++ b/Portfolio Website/Project/index.html
@@ -31,9 +31,6 @@
                     </li>
                     <li class="nav-item"><a class="nav-link" href="#about"><i class="fas fa-user"></i> About</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#certifications"> <i class="fas fa-certificate"></i>
-                            Certifications</a>
-                    </li>
                     <li class="nav-item"><a class="nav-link" href="#services"> <i class="fas fa-laptop-code"></i>
                             Services</a>
                     </li>
@@ -41,6 +38,9 @@
                             Projects</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="#skills"><i class="fas fa-code"></i> Skills</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="#certifications"> <i class="fas fa-certificate"></i>
+                            Certifications</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="#contact"><i class="fas fa-envelope"></i> Contact</a>
                     </li>
@@ -127,95 +127,6 @@
         </div>
     </section>
 
-   <!-- Certifications section -->
-<section id="certifications" class="py-5">
-    <div class="container text-center">
-        <div class="section-title">
-            <h2>Certifications</h2>
-        </div>
-
-        <!-- Carousel -->
-        <div id="certificationsCarousel" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <!-- Slide 1 -->
-                <div class="carousel-item active">
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <div class="info">
-                                <img class="img-container2 d-block w-100" src="./Images/cr-1.jpeg" alt="">
-                                <hr>
-                                <h5 class="section-title1 p-1 bolder">Full Stack Web Development with JavaScript (MERN)</h5>
-                                <p>6-month Full Stack (MERN) program covering JavaScript, React, NodeJS, MongoDB, and Git with projects and grades.</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <div class="info">
-                                <img class="img-container2 d-block w-100" src="./Images/cr-2.jpg" alt="">
-                                <hr>
-                                <h5 class="section-title1 p-1 bolder">Full Stack Web Development with JavaScript (MERN)</h5>
-                                <p>6-month Full Stack (MERN) program covering JavaScript, React, NodeJS, MongoDB, and Git with projects and grades.</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <div class="info">
-                                <img class="img-container2 d-block w-100" src="./Images/cr-3.jpeg" alt="">
-                                <hr>
-                                <h5 class="section-title1 p-1 bolder">Full Stack Web Development with JavaScript (MERN)</h5>
-                                <p>6-month Full Stack (MERN) program covering JavaScript, React, NodeJS, MongoDB, and Git with projects and grades.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Slide 2 -->
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <div class="info">
-                                <img class="img-container2 d-block w-100" src="./Images/cr-4.jpeg" alt="">
-                                <hr>
-                                <h5 class="section-title1 p-1 bolder">Full Stack Web Development with JavaScript (MERN)</h5>
-                                <p>6-month Full Stack (MERN) program covering JavaScript, React, NodeJS, MongoDB, and Git with projects and grades.</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <div class="info">
-                                <img class="img-container2 d-block w-100" src="./Images/cr-5.jpeg" alt="">
-                                <hr>
-                                <h5 class="section-title1 p-1 bolder">Full Stack Web Development with JavaScript (MERN)</h5>
-                                <p>6-month Full Stack (MERN) program covering JavaScript, React, NodeJS, MongoDB, and Git with projects and grades.</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <div class="info">
-                                <img class="img-container2 d-block w-100" src="./Images/cr-6.jpeg" alt="">
-                                <hr>
-                                <h5 class="section-title1 p-1 bolder">Full Stack Web Development with JavaScript (MERN)</h5>
-                                <p>6-month Full Stack (MERN) program covering JavaScript, React, NodeJS, MongoDB, and Git with projects and grades.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Add more slides as needed -->
-            </div>
-            <!-- Carousel controls -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#certificationsCarousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#certificationsCarousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </div>
-</section>
-
-<style>
-    
-</style>
-
-
-
     <!-- Services section -->
     <section id="services" class="py-5">
         <div class="container text-center">
@@ -235,7 +146,8 @@
                     <div class="info">
                         <i class="fas fa-mobile-alt" style="color: #28a745; font-size: 3rem;"></i>
                         <h4>Mobile App Development</h4>
-                        <p>Our team specializes in creating high-quality mobile applications for both iOS and Android
+                        <p>Our team specializes in creating high-quality mobile applications for both iOS and
+                            Android
                             platforms to meet your business needs.</p>
                     </div>
                 </div>
@@ -243,7 +155,8 @@
                     <div class="info">
                         <i class="fas fa-cloud" style="color: #17a2b8; font-size: 3rem;"></i>
                         <h4>Cloud Services</h4>
-                        <p>We offer comprehensive cloud services including deployment, management, and support to ensure
+                        <p>We offer comprehensive cloud services including deployment, management, and support to
+                            ensure
                             your business operations run smoothly.</p>
                     </div>
                 </div>
@@ -251,7 +164,8 @@
                     <div class="info">
                         <i class="fas fa-search" style="color: #ffc107; font-size: 3rem;"></i>
                         <h4>SEO Optimization</h4>
-                        <p>Enhance your online presence with our expert SEO services designed to improve your website's
+                        <p>Enhance your online presence with our expert SEO services designed to improve your
+                            website's
                             ranking and drive more traffic.</p>
                     </div>
                 </div>
@@ -259,7 +173,8 @@
                     <div class="info">
                         <i class="fas fa-paint-brush" style="color: #e83e8c; font-size: 3rem;"></i>
                         <h4>Graphic Design</h4>
-                        <p>Our creative team offers graphic design services to create visually appealing and effective
+                        <p>Our creative team offers graphic design services to create visually appealing and
+                            effective
                             marketing materials for your brand.</p>
                     </div>
                 </div>
@@ -380,6 +295,60 @@
         </div>
     </section>
 
+    <!-- Certifications section -->
+    <section id="certifications" class="py-5">
+        <div class="container text-center">
+            <div class="section-title">
+                <h2>Certifications</h2>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="info">
+                        <img class="img-container2" src="./Images/certificates/cr-1.jpeg" alt="Bohubrihi">
+                        <h4 class="certi-title">Full Stack Web Development MERN</h4>
+                        <h5>Organization: Bohubrihi </h5>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="info">
+                        <img class="img-container2" src="./Images/certificates/cr-2.jpg" alt="Great Learning">
+                        <h4 class="certi-title">Intro to Digital Marketing</h4>
+                        <h5>Organization: Great Learning </h5>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="info">
+                        <img class="img-container2" src="./Images/certificates/cr-3.png" alt="">
+                        <h4 class="certi-title">Kotlin</h4>
+                        <h5>Organization: Solo Learn </h5>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="info">
+                        <img class="img-container2" src="./Images/certificates/cr-4.png" alt="">
+                        <h4 class="certi-title">SQL Intermediate</h4>
+                        <h5>Organization: Solo Learn </h5>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="info">
+                        <img class="img-container2" src="./Images/certificates/cr-5.png" alt="">
+                        <h4 class="certi-title">Java Intermediate</h4>
+                        <h5>Organization: Solo Learn </h5>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="info">
+                        <img class="img-container2" src="./Images/certificates/cr-6.jpg" alt="">
+                        <h4 class="certi-title">Excel </h4>
+                        <h5>Organization: Macquarie University by Coursera  </h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact section -->
     <section id="contact" class="py-5">
         <div class="container">
@@ -470,6 +439,7 @@
                         </a>
                     </div>
                     <p class="mt-3">&copy; 2024 Nazmul Karim Tanvir. All Rights Reserved.</p>
+
                 </div>
             </div>
         </div>
