edited project image

--- a/Portfolio Website/Project/index.html
+++ b/Portfolio Website/Project/index.html
@@ -197,9 +197,9 @@
                 <h2>Projects</h2>
             </div>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <div class="info">
-                        <div class="img-container1 text-center">
+                        <div class="img-container3 text-center">
                             <img class="img-fluid" src="./Images/e1.png" alt="15th convocation BRAC University">
                         </div>
                         <div>
@@ -208,9 +208,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <div class="info">
-                        <div class="img-container1 text-center">
+                        <div class="img-container3 text-center">
                             <img class="img-fluid" src="./Images/e2.png" alt="15th convocation BRAC University">
                         </div>
                         <div>
@@ -219,9 +219,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <div class="info">
-                        <div class="img-container1 text-center">
+                        <div class="img-container3 text-center">
                             <img class="img-fluid" src="./Images/e3.png" alt="15th convocation BRAC University">
                         </div>
                         <div>
@@ -230,9 +230,31 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <div class="info">
-                        <div class="img-container1 text-center">
+                        <div class="img-container3 text-center">
+                            <img class="img-fluid" src="./Images/e4.png" alt="15th convocation BRAC University">
+                        </div>
+                        <div>
+                            <h4>Rent a Car App</h4>
+                            <p>Using Golang Docker</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="info">
+                        <div class="img-container3 text-center">
+                            <img class="img-fluid" src="./Images/e4.png" alt="15th convocation BRAC University">
+                        </div>
+                        <div>
+                            <h4>Rent a Car App</h4>
+                            <p>Using Golang Docker</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="info">
+                        <div class="img-container3 text-center">
                             <img class="img-fluid" src="./Images/e4.png" alt="15th convocation BRAC University">
                         </div>
                         <div>
