--- a/Portfolio Website/Project/index.html
+++ b/Portfolio Website/Project/index.html
@@ -8,7 +8,7 @@
     <title>Nazmul Karim Tanvir - Portfolio</title>
 
     <!-- Bootstrap CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome CDN -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -74,40 +74,59 @@
 
     <!-- About section -->
     <section id="about" class="py-5">
-        <div class="container text-center">
+        <div class="container">
             <div class="section-title">
                 <h2>About Me</h2>
             </div>
-            <div class="row info">
+            <div class="row info1 text-center align-items-center">
                 <div class="col-lg-6">
-                    <div>
-                        <p class="lead">Hello! I'm Nazmul Karim Tanvir, a Software Engineer with experience in full
-                            stack development
-                            and mobile applications.I have a strong background in both frontend and backend technologies
-                            and thrive in fast-paced, agile environments.</p>
+                    <!-- About Me Section -->
+                    <div class="border border-primary p-4 rounded shadow">
+                        <h4>Hello! I'm Nazmul Karim Tanvir</h4>
+                        <p>
+                            A Software Engineer with experience in full stack web development and mobile applications.
+                            I have a strong background in both frontend and backend technologies and thrive in
+                            fast-paced, agile environments.
+                        </p>
+                    </div>
 
-                        <div class="mt-4">
-                            <p><i class="fas fa-briefcase"></i> Support Associate at Shikho | Full Stack Web Developer
-                                (MERN) | Android App Developer |
-                                Fiver | Upwork</p>
-
-                            <p><i class="fas fa-car"></i> Founder of Tanvir_Rent_A_Car, providing affordable rides to
-                                300+ users within 6 months.
-                                <strong>Tanvir_Rent_A_Car:</strong> <a href="https://www.facebook.com/TanviRentACar"
-                                    target="_blank" rel="noopener">Visit</a><br>
-                            </p>
-
-                            <p><i class="fas fa-paint-brush " style="color: #05daff;"></i> Passionate about painting,
-                                traveling, and blogging. NK VLOGS BD, a blogging channel with 800+ subscribers and
-                                100,000+ views. <strong>NK VLOGS BD:</strong> <a
-                                    href="https://www.youtube.com/channel/UCRvLlXr3hn8dpG7ZRXkE7Tw" target="_blank"
-                                    rel="noopener">Visit</a></p>
-
+                    <!-- Work Experience -->
+                    <div class="my-4 border border-info p-4 rounded shadow">
+                        <div>
+                            <h5 class="bolder"><i class="fas fa-briefcase text-info"></i> Support Associate at Shikho
+                            </h5>
+                            <p class="mb-0">
+                                Full Stack Web Developer (MERN) | Android App Developer |
+                                Freelancer on Fiver and Upwork
                             </p>
                         </div>
-
+                        <hr>
+                        <div class="mt-3">
+                            <h5> <i class="fas fa-car text-info"></i>
+                                Founder of Tanvir_Rent_A_Car</h5>
+                            <p>
+                                Served 300+ users.
+                                <a class="btn btn-sm btn-outline-info" href="https://www.facebook.com/TanviRentACar"
+                                    target="_blank" rel="noopener" class="text-primary"><i class="fab fa-facebook"></i>
+                                    Visit</a>
+                            </p>
+                        </div>
+                        <hr>
+                        <div class="mt-3">
+                            <h5> <i class="fas fa-paint-brush text-info me-2"></i>
+                                Passionate about Painting, Traveling, and Blogging.</h5>
+                            <p class="mb-1">
+                                <span class="fw-bold">NK VLOGS BD</span>
+                                <a class="btn btn-sm btn-outline-danger"
+                                    href="https://www.youtube.com/channel/UCRvLlXr3hn8dpG7ZRXkE7Tw" target="_blank"
+                                    rel="noopener" class="text-danger text-decoration-none">
+                                    <i class="fab fa-youtube"></i> Visit
+                                </a>
+                            </p>
+                        </div>
                     </div>
                 </div>
+
                 <div class="col-lg-6">
                     <div class="img-container1 text-center">
                         <img class="img-fluid" src="./Images/graduationimage.jpeg"
@@ -115,15 +134,14 @@
                     </div>
                     <div class="mt-4 ">
                         <p><i class="fas fa-graduation-cap fa-2x"></i></p>
-                        <h6>
+                        <p class="edu-text-shadow">
                             <strong>BSC , MSC</strong> in
                             <strong>CSE</strong>
-                            BRAC University
-                        </h6>
+                            from <strong>BRAC University</strong>
+                        </p>
                     </div>
                 </div>
             </div>
-        </div>
         </div>
     </section>
 
