--- a/Portfolio Website/Project/index.html
+++ b/Portfolio Website/Project/index.html
@@ -63,25 +63,26 @@
 
                     <!-- Buttons -->
                     <div class="mt-4">
-                        <a href="#contact" class="btn btn-light me-3 py-3 px-3"><b>Let’s Collaborate</b></a>
+                        <a href="#contact" class="btn btn-light me-4 py-3 px-3"><b>Let’s Collaborate</b></a>
                         <a href="#about" class="btn btn-outline-primary py-3 px-3"><b>Learn More</b></a>
                     </div>
 
                     <!-- Counters -->
-                    <div class="d-flex justify-content-center justify-content-lg-start mt-5 counters">
-                        <div class="me-4 text-center">
+                    <div class="counters d-flex justify-content-center justify-content-lg-start mt-5">
+                        <div class="counter-box text-center">
                             <h2 class="counter" data-target="5">0</h2>
                             <p>Years Experience</p>
                         </div>
-                        <div class="me-4 text-center">
+                        <div class="counter-box text-center">
                             <h2 class="counter" data-target="50">0</h2>
                             <p>Projects Done</p>
                         </div>
-                        <div class="text-center">
+                        <div class="counter-box text-center">
                             <h2 class="counter" data-target="20">0</h2>
                             <p>Happy Clients</p>
                         </div>
                     </div>
+
                 </div>
 
                 <!-- Right Image -->
