updated skills section

--- a/Portfolio Website/Project/index.html
+++ b/Portfolio Website/Project/index.html
@@ -326,25 +326,28 @@
                 <div class="col-md-6">
                     <div class="info">
                         <h4><i class="fas fa-code" style="color: #ff5733;"></i> Frontend Development</h4>
-                        <p>HTML5, CSS, Bootstrap, JavaScript, React, Angular</p>
+                        <p>HTML5, CSS, Bootstrap5, TailwindCSS JavaScript, React, Angular, Zustand </p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="info">
                         <h4><i class="fas fa-server" style="color: #33c3ff;"></i> Backend Development</h4>
-                        <p>Node.js, Express, MongoDB, Python, Django, SQL, PHP, Laravel</p>
+                        <p>
+                            .NET, Node.js, Express, Python, Django, PHP, Laravel, MSSQL, MYSQL MongoDB
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="info">
                         <h4><i class="fas fa-mobile-alt" style="color: #33ff57;"></i> Mobile / IOS Development</h4>
-                        <p>React Native, Swift, Java, Kotlin</p>
+                        <p>React Native, Java, Kotlin, Flutter</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="info">
-                        <h4><i class="fas fa-code-branch" style="color: #ff33a6;"></i> Version Control</h4>
-                        <p>Git, Docker, CI/CD, Cloud Services (AWS, Azure), Agile Methodologies</p>
+                        <h4><i class="fas fa-code-branch" style="color: #ff33a6;"></i> Version Control & DevOps</h4>
+                        <p>Git, Docker, CI/CD (Jenkins, SonarQube),<br> Cloud Services (AWS, Azure), <br>
+                            Agile Methodologies (Scrum, Jira, Clickup)</p>
                     </div>
                 </div>
                 <div class="col-md-6">
